force-app/main/default/objects/Orden__c/Orden__c.object-meta.xml
<CustomObject>
    <label>Orden</label>
    <nameField>
        <displayFormat>Orden {0000}</displayFormat>
        <label>Orden</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ordenes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>