force-app/main/default/objects/Orden__c/fields/A_C_2__c.field-meta.xml
<CustomField>
    <fullName>A_C_2__c</fullName>
    <label>A/C 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>