force-app/main/default/objects/Orden__c/fields/A_C_3__c.field-meta.xml
<CustomField>
    <fullName>A_C_3__c</fullName>
    <label>A/C 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>