force-app/main/default/objects/Orden__c/fields/Cantidad_de_cajas__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_cajas__c</fullName>
    <formula>Cantidad_total_de_productos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cantidad de cajas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>