force-app/main/default/objects/Orden__c/fields/Cantidad_producto2__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_producto2__c</fullName>
    <label>Cantidad producto 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>