force-app/main/default/objects/Orden__c/fields/Cantidad_total_de_productos__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_total_de_productos__c</fullName>
    <formula>Cantidad_producto1__c+ Cantidad_producto2__c + Cantidad_producto3__c + Cantidad_producto4__c + Cantidad_producto5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cantidad total de productos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>