force-app/main/default/objects/Orden__c/fields/Contenedor__c.field-meta.xml
<CustomField>
    <fullName>Contenedor__c</fullName>
    <label>Contenedor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20_Dry</fullName>
                <label>20&apos; Dry</label>
            </value>
            <value>
                <fullName>40_HC</fullName>
                <label>40&apos; HC</label>
            </value>
            <value>
                <fullName>20&apos; Reefer</fullName>
            </value>
            <value>
                <fullName>40&apos; HC Reefer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>