force-app/main/default/objects/Orden__c/fields/Datos_de_Estiba_INV_reunidos__c.field-meta.xml
<CustomField>
    <fullName>Datos_de_Estiba_INV_reunidos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Datos de Estiba/INV reunidos</label>
    <type>Checkbox</type>
</CustomField>