force-app/main/default/objects/Orden__c/fields/Documentacion_requerida__c.field-meta.xml
<CustomField>
    <fullName>Documentacion_requerida__c</fullName>
    <label>Documentacion requerida</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Documentos</valueSetName>
    </valueSet>
</CustomField>