force-app/main/default/objects/Orden__c/fields/En_dise_o__c.field-meta.xml
<CustomField>
    <fullName>En_dise_o__c</fullName>
    <defaultValue>false</defaultValue>
    <label>En diseño</label>
    <type>Checkbox</type>
</CustomField>