force-app/main/default/objects/Orden__c/fields/Estado_de_orden__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_orden__c</fullName>
    <label>Estado de orden</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abierta</fullName>
                <default>true</default>
                <label>Abierta</label>
            </value>
            <value>
                <fullName>Datos_para_Eiqueta</fullName>
                <label>Datos para Eiqueta</label>
            </value>
            <value>
                <fullName>Envio_de_Etiquetas</fullName>
                <label>Envio de Etiquetas</label>
            </value>
            <value>
                <fullName>Documentación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>