force-app/main/default/objects/Orden__c/fields/Fecha_de_ingreso__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_ingreso__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de ingreso</label>
    <type>Date</type>
</CustomField>