force-app/main/default/objects/Orden__c/fields/Fecha_Despacho__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Despacho__c</fullName>
    <label>Fecha Despacho</label>
    <required>true</required>
    <type>Date</type>
</CustomField>