force-app/main/default/objects/Orden__c/fields/Forwarder__c.field-meta.xml
<CustomField>
    <fullName>Forwarder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forwarder</label>
    <referenceTo>Forwarder__c</referenceTo>
    <relationshipName>Ordenes_de_Produccion</relationshipName>
    <type>Lookup</type>
</CustomField>