force-app/main/default/objects/Orden__c/fields/IncoTerm__c.field-meta.xml
<CustomField>
    <fullName>IncoTerm__c</fullName>
    <label>IncoTerm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Incoterms_2020_TIBA</valueSetName>
    </valueSet>
</CustomField>