force-app/main/default/objects/Orden__c/fields/Lote_1__c.field-meta.xml
<CustomField>
    <fullName>Lote_1__c</fullName>
    <label>Lote 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>