force-app/main/default/objects/Orden__c/fields/Lote_2__c.field-meta.xml
<CustomField>
    <fullName>Lote_2__c</fullName>
    <label>Lote 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>