force-app/main/default/objects/Orden__c/fields/Lote_3__c.field-meta.xml
<CustomField>
    <fullName>Lote_3__c</fullName>
    <label>Lote 3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>