force-app/main/default/objects/Orden__c/fields/Numero_de_orden__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_orden__c</fullName>
    <label>Numero de orden</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>