force-app/main/default/objects/Orden__c/fields/Otra_informaci_n__c.field-meta.xml
<CustomField>
    <fullName>Otra_informaci_n__c</fullName>
    <label>Otra información</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>