force-app/main/default/objects/Orden__c/fields/POD__c.field-meta.xml
<CustomField>
    <fullName>POD__c</fullName>
    <label>POD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Puertos_m_s_importantes_dell_mundo</valueSetName>
    </valueSet>
</CustomField>