force-app/main/default/objects/Orden__c/fields/POL__c.field-meta.xml
<CustomField>
    <fullName>POL__c</fullName>
    <label>POL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chile (San Antonio)</fullName>
            </value>
            <value>
                <fullName>Chile (Valparaiso)</fullName>
            </value>
            <value>
                <fullName>Argentina (Buenos Aires)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>