force-app/main/default/objects/Orden__c/fields/Producto1__c.field-meta.xml
<CustomField>
    <fullName>Producto1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Producto1</label>
    <referenceTo>Producto__c</referenceTo>
    <relationshipName>Ordenes_de_Produccion</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>