force-app/main/default/objects/Orden__c/fields/Producto2__c.field-meta.xml
<CustomField>
    <fullName>Producto2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto2</label>
    <referenceTo>Producto__c</referenceTo>
    <relationshipName>Ordenes_de_Produccion4</relationshipName>
    <type>Lookup</type>
</CustomField>