force-app/main/default/objects/Orden__c/fields/Producto3__c.field-meta.xml
<CustomField>
    <fullName>Producto3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto3</label>
    <referenceTo>Producto__c</referenceTo>
    <relationshipName>Ordenes_de_Produccion1</relationshipName>
    <type>Lookup</type>
</CustomField>