force-app/main/default/objects/Orden__c/fields/Tipo_de_Carga__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Carga__c</fullName>
    <label>Tipo de Carga</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LCL</fullName>
                <color>#66FFFF</color>
                <label>LCL</label>
            </value>
            <value>
                <fullName>FCL</fullName>
                <color>#FF6666</color>
                <label>FCL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>