force-app/main/default/objects/Orden__c/fields/Tipo_de_Pallet__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Pallet__c</fullName>
    <label>Tipo de Pallet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pallet Standart</fullName>
            </value>
            <value>
                <fullName>Europallet</fullName>
            </value>
            <value>
                <fullName>Carga Suelta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>