force-app/main/default/objects/Orden__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Numero_de_orden__c</columns>
    <columns>Cliente__c</columns>
    <columns>Pais__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>